--- a/index.html
+++ b/index.html
@@ -16,7 +16,22 @@
 
 <body>
 
-<header class="header"> Some Text..</header>
+<header class="header">
+    <div class="logo-box">
+        <img alt="Logo" class="logo" src="./img/logo-white.png">
+    </div>
+
+    <div class="text-box">
+        <h2 class="heading-primary">
+            <span class="heading-primary-main">Outdoors</span>
+            <span class="heading-primary-sub">is where life happens</span>
+        </h2>
+        <a class="btn btn-white btn-animated" href="#">
+            Discovers Our Tours
+        </a>
+    </div>
+
+</header>
 
 </body>
 </html>
