--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 <body>
 
 <header class="header">
-    <div class="logo-box">
-        <img alt="Logo" class="logo" src="./img/logo-white.png">
+    <div class="header__logo-box">
+        <img alt="Logo" class="header__logo" src="./img/logo-white.png">
     </div>
 
-    <div class="text-box">
+    <div class="header__text-box">
         <h2 class="heading-primary">
-            <span class="heading-primary-main">Outdoors</span>
-            <span class="heading-primary-sub">is where life happens</span>
+            <span class="heading-primary--main">Outdoors</span>
+            <span class="heading-primary--sub">is where life happens</span>
         </h2>
-        <a class="btn btn-white btn-animated" href="#">
+        <a class="btn btn--white btn--animated" href="#">
             Discovers Our Tours
         </a>
     </div>
