About Section Done !

--- a/index.html
+++ b/index.html
@@ -30,7 +30,77 @@
             Discovers Our Tours
         </a>
     </div>
+
 </header>
+<main>
+    <section class="section-about">
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary"> Exciting Tours for adventurers People</h2>
+        </div>
+        <div class="row">
+            <div class="col-1-of-2">
+                <h3 class="heading-tertiary u-margin-bottom-small"> You're going to fall in love with nature</h3>
+                <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A eaque incidunt maiores
+                    quo unde velit voluptas. Adipisci asperiores aut eligendi officiis pariatur possimus praesentium,
+                    quam quas ratione recusandae sint vero? </p>
+
+                <h3 class="heading-tertiary u-margin-bottom-small"> Live adventure like never had before</h3>
+                <p class="paragraph">Lorem ipsum dolor sit amet,consectetur adipisicing elit. A eaque incidunt maiores
+                    quo unde velit voluptas. Adipisci asperiores aut eligendi officiis </p>
+
+                <a class="btn-text" href="#">Learn more &rarr; </a>
+            </div>
+
+            <div class="col-1-of-2">
+                <div class="composition ">
+                    <img alt="Photo-1" class="composition__photo composition__photo--p1" src="./img/nat-1-large.jpg">
+
+                    <img alt="Photo-2"
+                         class="composition__photo composition__photo--p2"
+                         src="./img/nat-2-large.jpg">
+
+                    <img alt="Photo-3" class="composition__photo composition__photo--p3" src="./img/nat-3-large.jpg">
+                </div>
+            </div>
+        </div>
+    </section>
+
+</main>
+<!--Just for Practice-->
+<!--<section class="grid-test">-->
+
+<!--    <div class="row">-->
+<!--        <div class="col-1-of-2"> Col 1 of 2</div>-->
+<!--        <div class="col-1-of-2"> Col 1 of 2</div>-->
+<!--    </div>-->
+
+<!--    <div class="row">-->
+<!--        <div class="col-1-of-3"> Col 1 of 3</div>-->
+<!--        <div class="col-1-of-3"> Col 1 of 3</div>-->
+<!--        <div class="col-1-of-3"> Col 1 of 3</div>-->
+<!--    </div>-->
+
+<!--    <div class="row">-->
+<!--        <div class="col-1-of-3"> Col 1 of 3</div>-->
+<!--        <div class="col-2-of-3"> Col 2 of 3</div>-->
+<!--    </div>-->
+<!--    <div class="row">-->
+<!--        <div class="col-1-of-4">Col 1 of 4</div>-->
+<!--        <div class="col-1-of-4">Col 1 of 4</div>-->
+<!--        <div class="col-1-of-4">Col 1 of 4</div>-->
+<!--        <div class="col-1-of-4">Col 1 of 4</div>-->
+<!--    </div>-->
+<!--    <div class="row">-->
+<!--        <div class="col-1-of-4">Col 1 of 4</div>-->
+<!--        <div class="col-1-of-4">Col 1 of 4</div>-->
+<!--        <div class="col-2-of-4">Col 2 of 4</div>-->
+<!--    </div>-->
+<!--    <div class="row">-->
+<!--        <div class="col-1-of-4">Col 1 of 4</div>-->
+<!--        <div class="col-3-of-4">Col 3 of 4</div>-->
+<!--    </div>-->
+
+<!--</section>-->
 
 </body>
 </html>
