--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-    <!--        <link rel="stylesheet" href="css/icon-font.css">-->
+    <link href="css/icon-font.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="img/favicon.png" rel="shortcut icon" type="image/png">
 
@@ -64,7 +64,53 @@
             </div>
         </div>
     </section>
+    <section class="section-features">
+        <div>
 
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small"> Explore the world</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa rem soluta voluptatum
+                            consectetur!
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small"> Meet nature</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa rem soluta voluptatum
+                            consectetur!
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small"> Find Your way</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa rem soluta voluptatum
+                            consectetur!
+                        </p>
+                    </div>
+                </div>
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small"> Live a healther life</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa rem soluta voluptatum
+                            consectetur!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
 <!--Just for Practice-->
 <!--<section class="grid-test">-->
