--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         </div>
     </section>
     <section class="section-features">
+
         <div>
 
             <div class="row">
@@ -109,6 +110,36 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+    <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">Most Popular Tours</h2>
+        </div>
+
+        <div class="row">
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front card__side--front-1">
+                        <div class="card__picture card__picture--1">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading--span card__heading-span--1">
+                            The sea Explorer
+                            </span>
+                        </h4>
+                        <div class="card__details">
+                            Details
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-1">
+                        back Side
+                    </div>
+                </div>
+            </div>
+            <div class="col-1-of-3"> Col 1 of 3</div>
+            <div class="col-1-of-3"> Col 1 of 3</div>
         </div>
     </section>
 </main>
