--- a/index.html
+++ b/index.html
@@ -125,21 +125,100 @@
                             &nbsp;
                         </div>
                         <h4 class="card__heading">
-                            <span class="card__heading--span card__heading-span--1">
+                            <span class="card__heading-span card__heading-span--1">
                             The sea Explorer
                             </span>
                         </h4>
                         <div class="card__details">
-                            Details
+                            <ul>
+                                <li>3 tours</li>
+                                <li>upto 5 people</li>
+                                <li>2 tour guide</li>
+                                <li>sleep in crazy hotels</li>
+                                <li>Difficulty: easy</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="card__side card__side--back card__side--back-1">
-                        back Side
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">$297</p>
+                            </div>
+                            <a class="btn btn--white" href="#">Book Now</a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-1-of-3"> Col 1 of 3</div>
-            <div class="col-1-of-3"> Col 1 of 3</div>
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front card__side--front-1">
+                        <div class="card__picture card__picture--2">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--2">
+                            The  forest hiker
+                            </span>
+                        </h4>
+                        <div class="card__details">
+                            <ul>
+                                <li>7 day tours</li>
+                                <li>upto 40 people</li>
+                                <li>4 tour guide</li>
+                                <li>sleep in crazy hotels</li>
+                                <li>Difficulty: medium</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-2">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">$297</p>
+                            </div>
+                            <a class="btn btn--white" href="#">Book Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-1-of-3">
+                <div class="card">
+                    <div class="card__side card__side--front card__side--front-1">
+                        <div class="card__picture card__picture--3">
+                            &nbsp;
+                        </div>
+                        <h4 class="card__heading">
+                            <span class="card__heading-span card__heading-span--3">
+                            The sea Explorer
+                            </span>
+                        </h4>
+                        <div class="card__details">
+                            <ul>
+                                <li>5 day tour</li>
+                                <li>upto 15 people</li>
+                                <li>3 tour guide</li>
+                                <li>sleep in crazy hotels</li>
+                                <li>Difficulty: hard</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-3">
+                        <div class="card__cta">
+                            <div class="card__price-box">
+                                <p class="card__price-only">Only</p>
+                                <p class="card__price-value">$297</p>
+                            </div>
+                            <a class="btn btn--white" href="#">Book Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="u-center-text  u-margin-top-huge">
+            <a class="btn btn--green" href="#">
+                Discovers Our Tours
+            </a>
         </div>
     </section>
 </main>
